# MyMatrix

./: 0_1_32.nb  Allocator.h  Allocator_other.h  CMakeLists.txt  Complex.h  Complex.hpp  Fileswork.hpp  LinAlgError.h  Matrix.h  Matrix.hpp  Matrix_utilites.hpp  Matrix_utilites_additional.h  Matrix_utilites_additional.hpp  Matrix_utilities.h  README.md  check.cpp  check.h  complex_h.h  complex_hpp.hpp  main.cpp  new.cpp
